k8s/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  labels:
    app: defguard
    service: core
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: defguard
      service: core
  template:
    metadata:
      labels:
        app: defguard
        service: core
    spec:
      containers:
        - name: core
          image: ghcr.io/defguard/defguard:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
            - name: grpc
              containerPort: 50055
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
