k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: defguard
    service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defguard
      service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: defguard
        service: db
    spec:
      containers:
        - name: db
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-claim
              subPath: postgres
      restartPolicy: Always
      volumes:
        - name: db-claim
          persistentVolumeClaim:
            claimName: db-claim
