k8s/private-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: private-reg-container
    # image: registry.teonite.net/defguard/core:latest
    image: ghcr.io/defguard/defguard:0.3.0
    # image: defguard-core
  imagePullSecrets:
  - name: regcred
