k8s/core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  labels:
    app: defguard
    service: core
spec:
  ports:
    - name: http
      port: 8000
      targetPort: "http"
      protocol: TCP
  selector:
    app: defguard
    service: core
